@@ -4,7 +4,7 @@ import lombok.CustomLog;
 import lombok.SneakyThrows;
 import me.supcheg.advancedmanhunt.coord.Distance;
 import me.supcheg.advancedmanhunt.coord.KeyedCoord;
-import me.supcheg.advancedmanhunt.player.Message;
+import me.supcheg.advancedmanhunt.text.MessageText;
 import me.supcheg.advancedmanhunt.region.GameRegion;
 import me.supcheg.advancedmanhunt.region.SpawnLocationFindResult;
 import me.supcheg.advancedmanhunt.region.SpawnLocationFinder;
@@ -31,7 +31,6 @@ import org.popcraft.chunky.platform.BukkitWorld;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -65,7 +64,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
     @Override
     public void runCreateTask(@NotNull CommandSender sender, @NotNull TemplateCreateConfig config) {
         if (!config.getSideSize().isFullRegions()) {
-            Message.TEMPLATE_GENERATE_SIDE_SIZE_NOT_EXACT.send(sender, config.getSideSize());
+            MessageText.TEMPLATE_GENERATE_SIDE_SIZE_NOT_EXACT.send(sender, config.getSideSize());
             return;
         }
 
@@ -89,7 +88,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
         GenerationTask generationTask = new GenerationTask(chunky, selection);
         chunky.getGenerationTasks().put(config.getName(), generationTask);
 
-        Message.TEMPLATE_GENERATE_START.send(sender, config.getName(), config.getSideSize());
+        MessageText.TEMPLATE_GENERATE_START.send(sender, config.getName(), config.getSideSize());
         chunky.getScheduler().runTask(() -> {
             generationTask.run();
             afterWorldGeneration(config);
@@ -104,7 +103,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
 
         World world = Bukkit.getWorld(worldName);
         if (world == null) {
-            Message.TEMPLATE_GENERATE_NO_WORLD.broadcast(worldName);
+            MessageText.TEMPLATE_GENERATE_NO_WORLD.broadcast(worldName);
             return;
         }
 
@@ -113,7 +112,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
         CompletableFuture.runAsync(() -> Bukkit.unloadWorld(worldName, true), syncExecutor).join();
 
         if (Bukkit.getWorld(worldName) != null) {
-            Message.TEMPLATE_GENERATE_CANNOT_UNLOAD.broadcast(worldName);
+            MessageText.TEMPLATE_GENERATE_CANNOT_UNLOAD.broadcast(worldName);
             return;
         }
 
@@ -132,7 +131,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
             }
 
         } catch (Exception e) {
-            Message.TEMPLATE_GENERATE_CANNOT_MOVE_DATA.broadcast(worldName, outPath);
+            MessageText.TEMPLATE_GENERATE_CANNOT_MOVE_DATA.broadcast(worldName, outPath);
             log.error("An error occurred while moving world files", e);
             return;
         }
@@ -148,7 +147,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
 
         templateRepository.storeEntity(template);
 
-        Message.TEMPLATE_GENERATE_SUCCESS.broadcast(template.getName(), template.getSideSize(), template.getFolder());
+        MessageText.TEMPLATE_GENERATE_SUCCESS.broadcast(template.getName(), template.getSideSize(), template.getFolder());
         log.debugIfEnabled("End of generating template with config: {}", config);
     }
 
@@ -169,7 +168,7 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
 
         int locationsCount = config.getSpawnLocationsCount();
 
-        List<SpawnLocationFindResult> locations = new ArrayList<>(locationsCount);
+        SpawnLocationFindResult[] locations = new SpawnLocationFindResult[locationsCount];
 
         int radiusInRegions = config.getSideSize().getRegions() / 2;
 
@@ -197,10 +196,10 @@ public class ChunkyTemplateTaskFactory implements TemplateTaskFactory {
                     runnerSpawnRadiusDistance
             );
 
-            locations.add(spawnLocationFinder.find(gameRegion, huntersCount));
+            locations[i] = spawnLocationFinder.find(gameRegion, huntersCount);
             log.debugIfEnabled("Finished generation of spawn location {}", i + 1);
         }
 
-        return Collections.unmodifiableList(locations);
+        return List.of(locations);
     }
 }
